--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@react-three/drei": "^9.56.24",
     "@react-three/fiber": "^8.11.0",
+    "@react-three/postprocessing": "^2.7.0",
     "expo": "^47.0.13",
     "expo-gl": "^12.0.1",
     "react": "18.1.0",
