--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
   "name": "expo-r3f-starter",
-  "main": "./src/index.ts",
+  "version": "0.2.0",
   "license": "MIT",
+  "main": "./src/index.ts",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@expo/webpack-config": "^0.17.2",
-    "@types/react": "^18.0.28",
-    "@types/react-native": "~0.70.6",
-    "@types/three": "^0.149.0",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "typescript": "^4.6.3"
   },
   "dependencies": {
     "@react-three/drei": "^9.56.24",
@@ -29,5 +21,22 @@
     "react-native": "0.70.5",
     "react-native-web": "^0.18.12",
     "three": "^0.145.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@expo/webpack-config": "^0.17.2",
+    "@types/react": "^18.0.28",
+    "@types/react-native": "~0.70.6",
+    "@types/three": "^0.149.0",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "typescript": "^4.6.3"
+  },
+  "resolutions": {
+    "metro": "0.73.7",
+    "metro-resolver": "0.73.7"
+  },  
+  "overrides": {
+    "metro": "0.73.7",
+    "metro-resolver": "0.73.7"
   }
 }
