Introduce expo-router

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,11 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {      
-      "@fiber": ["./src/lib/react-three/fiber"],
-      "@drei": ["./src/lib/react-three/drei"],
-      "@postprocessing": ["./src/lib/react-three/postprocessing"],
-      "@lib/*": ["./src/lib/*"],
-      "@components/*": ["./src/components/*"],
-      "@scenes/*": ["./src/scenes/*"],
+      "@fiber": ["./lib/react-three/fiber"],
+      "@drei": ["./lib/react-three/drei"],
+      "@postprocessing": ["./lib/react-three/postprocessing"],
+      "@lib/*": ["./lib/*"],
+      "@components/*": ["./components/*"],
       "@assets/*": ["./assets/*"]
     }
   }
