--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "expo-r3f-starter",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "license": "MIT",
-  "main": "./src/index.ts",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -15,10 +14,16 @@
     "@react-three/fiber": "^8.11.0",
     "@react-three/postprocessing": "^2.7.0",
     "expo": "^47.0.13",
+    "expo-constants": "~14.0.2",
     "expo-gl": "^12.0.1",
+    "expo-linking": "~3.3.0",
+    "expo-router": "^1.0.0-rc7",
+    "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-web": "^0.18.12",
     "three": "^0.145.0"
   },
@@ -34,7 +39,7 @@
   "resolutions": {
     "metro": "0.73.7",
     "metro-resolver": "0.73.7"
-  },  
+  },
   "overrides": {
     "metro": "0.73.7",
     "metro-resolver": "0.73.7"
