--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "expo-r3f-starter",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "license": "MIT",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,38 +11,31 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-three/drei": "^9.56.24",
-    "@react-three/fiber": "^8.11.0",
-    "@react-three/postprocessing": "^2.7.0",
-    "expo": "^47.0.13",
-    "expo-constants": "~14.0.2",
-    "expo-gl": "^12.0.1",
-    "expo-linking": "~3.3.0",
-    "expo-router": "^1.0.0-rc7",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-web": "^0.18.12",
-    "three": "^0.145.0"
+    "@expo/config-plugins": "^7.2.2",
+    "@react-three/drei": "^9.68.6",
+    "@react-three/fiber": "^8.13.0",
+    "@react-three/postprocessing": "^2.12.3",
+    "expo": "^49.0.21",
+    "expo-constants": "~14.4.2",
+    "expo-gl": "~13.0.1",
+    "expo-linking": "~5.0.2",
+    "expo-router": "^2.0.0",
+    "expo-status-bar": "~1.6.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6",
+    "three": "^0.152.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@expo/webpack-config": "^0.17.2",
-    "@types/react": "^18.0.28",
-    "@types/react-native": "~0.70.6",
-    "@types/three": "^0.149.0",
+    "@babel/core": "^7.21.8",
+    "@expo/webpack-config": "^19.0.0",
+    "@types/react": "~18.2.14",
+    "@types/three": "^0.152.0",
     "babel-plugin-module-resolver": "^5.0.0",
-    "typescript": "^4.6.3"
-  },
-  "resolutions": {
-    "metro": "0.73.7",
-    "metro-resolver": "0.73.7"
-  },
-  "overrides": {
-    "metro": "0.73.7",
-    "metro-resolver": "0.73.7"
+    "typescript": "^5.1.3"
   }
 }
