--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "dependencies": {
     "@expo/config-plugins": "^7.2.2",
-    "@react-three/drei": "^9.68.6",
-    "@react-three/fiber": "^8.13.0",
-    "@react-three/postprocessing": "^2.12.3",
+    "@react-three/drei": "^9.89.0",
+    "@react-three/fiber": "^8.15.11",
+    "@react-three/postprocessing": "^2.15.11",
     "expo": "^49.0.21",
     "expo-constants": "~14.4.2",
     "expo-gl": "~13.0.1",
@@ -28,14 +28,14 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
-    "three": "^0.152.2"
+    "three": "^0.159.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.8",
+    "@babel/core": "^7.23.5",
     "@expo/webpack-config": "^19.0.0",
-    "@types/react": "~18.2.14",
-    "@types/three": "^0.152.0",
+    "@types/react": "^18.2.39",
+    "@types/three": "^0.159.0",
     "babel-plugin-module-resolver": "^5.0.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.3.2"
   }
 }
